feature: adding in debug log messages. updating dependencies