@@ -1,8 +1,8 @@
 plugins {
     id "application"
     id "org.openjfx.javafxplugin" version "0.0.8"
-    id "org.springframework.boot" version "2.1.8.RELEASE"
-    id "io.spring.dependency-management" version "1.0.6.RELEASE"
+    id "org.springframework.boot" version "2.3.3.RELEASE"
+    id "io.spring.dependency-management" version "1.0.10.RELEASE"
 }
 
 group "com.github.adamyork"
@@ -18,18 +18,22 @@ repositories {
     jcenter()
 }
 
+//jdeps -R --multi-release 14 --ignore-missing-deps --class-path "build\libs\*" --print-module-deps build\classes\java\main\com\github\adamyork\fx5p1d3r\Main.class > temp.txt
+//jpackage --type exe --dest build/installer --input build/libs --name 5p1d3r --main-class com.github.adamyork.fx5p1d3r.AppLauncher --main-jar 5p1d3r-1.0.jar --java-options -Xmx2048m --runtime-image build/java-runtime --app-version 1.0 --vendor "ACME Inc." --copyright "Copyright © 2019-20 ACME Inc." --win-dir-chooser
+//jlink --no-header-files --no-man-pages --compress=2 --strip-debug --add-modules "java.base,jdk.localedata" --include-locales=en --output build/java-runtime
+
 dependencies {
-    compile group: "org.springframework.boot", name: "spring-boot-starter", version: "2.1.8.RELEASE"
-    compile group: "org.jsoup", name: "jsoup", version: "1.7.2"
-    compile group: "commons-validator", name: "commons-validator", version: "1.4.0"
-    compile group: "commons-io", name: "commons-io", version: "2.4"
-    compile group: "org.codehaus.groovy", name: "groovy-all", version: "2.4.7"
-    compile group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.8.7"
-    compile group: "com.fasterxml.jackson.dataformat", name: "jackson-dataformat-csv", version: "2.8.7"
-    compile group: 'commons-configuration', name: 'commons-configuration', version: '1.10'
+    compile group: "org.springframework.boot", name: "spring-boot-starter", version: "2.3.3.RELEASE"
+    compile group: "org.jsoup", name: "jsoup", version: "1.13.1"
+    compile group: "commons-validator", name: "commons-validator", version: "1.7"
+    compile group: "commons-io", name: "commons-io", version: "2.7"
+    compile group: "org.codehaus.groovy", name: "groovy-all", version: "3.0.5"
+    compile group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.11.2"
+    compile group: "com.fasterxml.jackson.dataformat", name: "jackson-dataformat-csv", version: "2.11.2"
+    compile group: "commons-configuration", name: "commons-configuration", version: "1.10"
     compile group: "org.controlsfx", name: "controlsfx", version: "11.0.2"
-    compile group: "org.jooq", name: "jool", version: "0.9.12"
-    compile group: 'javax.inject', name: 'javax.inject', version: '1'
+    compile group: "org.jooq", name: "jool", version: "0.9.14"
+    compile group: "javax.inject", name: "javax.inject", version: "1"
     testCompile group: "junit", name: "junit", version: "4.11"
 }
 
@@ -42,17 +46,8 @@ processResources {
 compileJava.dependsOn(processResources)
 
 javafx {
-    mainClassName = "com.github.adamyork.fx5p1d3r.Main"
-    version = "11"
+    mainClassName = "com.github.adamyork.fx5p1d3r.AppLauncher"
+    version = "14"
     modules = ["javafx.controls", "javafx.fxml"]
     //jvmArgs = ["-agentlib:jdwp=transport=dt_socket,address=8004,server=y,suspend=y"]
 }
-
-//sourceSets {
-//    main {
-//        resources {
-//            srcDirs = ["src/main/java", "src/main/resources"]
-//            includes = ["**/*.fxml", "**/*.css", "**/*.png", "**/*.groovy", "*.properties"]
-//        }
-//    }
-//}
